# strutex

./: .gitignore  README.md  ROADMAP.md  cmp.txt  mkdocs.yml  pyproject.toml  requirements.txt  verify_async.py  verify_hybrid.py  verify_usage.py  verify_validation.py  versions.json
.github/workflows/: ci.yml  docs.yml  publish.yml
0.5.2/: 404.html  index.html  objects.inv  sitemap.xml
0.5.2/api-reference/: index.html
0.5.2/cli/: index.html
0.8.0/: 404.html  index.html  sitemap.xml
0.8.1/: 404.html  index.html  objects.inv  sitemap.xml
0.8.5/: 404.html  index.html  sitemap.xml
0.8.6/: 404.html  index.html  sitemap.xml
0.9.0/: 404.html  index.html  objects.inv  sitemap.xml
0.9.1/: 404.html  index.html  objects.inv  sitemap.xml
dev/: 404.html  index.html  objects.inv  sitemap.xml
docs/: api-reference.md  cache.md  changelog.md  context.md  extractors.md  getting-started.md  index.md  integrations.md  plugins.md  prompt-builder.md  provider-chains.md  providers.md  pydantic.md  schema-types.md  schemas.md  security.md  streaming.md  tutorial-batch.md  tutorial-caching.md  tutorial-custom-plugins.md  tutorial-document-input.md  tutorial-error-handling.md  tutorial-hooks.md  tutorial-integrations.md  tutorial-prompts.md  tutorial-providers.md  tutorial-quickstart.md  tutorial-schema.md  tutorial-security.md  tutorial-streaming.md  tutorial-use-cases.md  tutorial-validation.md  validators.md  verification.md
examples/: basic_usage.py  bill_of_lading_extraction.py  caching_example.py  context_example.py  contract_extraction.py  extractors_validators_example.py  financial_statement_extraction.py  formatted_extraction.py  insurance_claim_extraction.py  invoice_app.py  main.py  medical_record_extraction.py  meeting_minutes_extraction.py  patent_extraction.py  plugin_example.py  product_specs_extraction.py  provider_chain_example.py  pydantic_example.py  real_estate_extraction.py  receipt_extraction.py  research_paper_extraction.py  resume_extraction.py  schemas_example.py  security_example.py  structured_prompt_example.py  verification_example.py
pyapu/: __init__.py  processor.py
strutex/: __init__.py  cli.py  input.py  processor.py  types.py
tests/: test_adapters.py  test_async.py  test_cache.py  test_documents.py  test_error_injection.py  test_exceptions.py  test_formatted_extractor.py  test_init.py  test_input.py  test_plugins.py  test_prompts.py  test_provider_openai.py  test_pydantic_support.py  test_security.py  test_types.py  test_verification.py
(+183 files in other folders)
