[tool.poetry]
name = "strutex"
version = "0.8.0"
description = "Structured AI document processing with robust fallback strategies."
authors = ["aquiles <achillezongo07@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/Aquilesorei/strutex"
repository = "https://github.com/Aquilesorei/strutex"
keywords = ["pdf", "ai", "llm", "extraction", "json"]

[tool.poetry.plugins."strutex.providers"]
"gemini" = "strutex.providers.gemini:GeminiProvider"
"openai" = "strutex.providers.openai:OpenAIProvider"
"anthropic" = "strutex.providers.anthropic:AnthropicProvider"
"ollama" = "strutex.providers.ollama:OllamaProvider"
"groq" = "strutex.providers.groq:GroqProvider"
"langdock" = "strutex.providers.langdock:LangdockProvider"

[tool.poetry.plugins."strutex.validators"]
"gemini" = "strutex.security.output.OutputValidator"

[tool.poetry.scripts]
strutex = "strutex.cli:main"

[tool.poetry.dependencies]
python = "^3.12"
google-genai = "^1.53.0"
pypdf = "^6.4.0"
pdfplumber = "^0.11.8"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
pydantic = "^2.12.5"
openai = "^2.8.1"
python-dotenv = "^1.2.1"
pluggy = "^1.5.0"

# --- Optional Dependencies ---
click = { version = "^8.1.0", optional = true }
pdf2image = { version = "^1.17.0", optional = true }
pytesseract = { version = "^0.3.10", optional = true }

[tool.poetry.extras]
cli = ["click"]
ocr = ["pdf2image", "pytesseract"]
all = ["click", "pdf2image", "pytesseract"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
hypothesis = "^6.92.0"
mypy = "^1.8.0"
pyyaml = "^6.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
mike = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"